# ClientServer_BoostAsio

./: .gitignore  CMakeLists.txt  README.md
include/detail/: ErrHandler.hpp  ExprToType.hpp  Precompiled.hpp  StringUtils.hpp  TimeMeasurment.hpp  Tokeniser.hpp
include/lib/: Client.hpp  Common.hpp  Server.hpp  libClientServer.hpp
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  Client.cpp  main.cpp
src/lib/: CMakeLists.txt  libClientServer.cpp
src/server/: CMakeLists.txt  Server.cpp  main.cpp
tests/: CMakeLists.txt  Client_Tests.cpp  Server_Tests.cpp  lib_Tests.cpp
tests/mocks/: FakeClient.hpp  FakeServer.hpp
